--- a/package.json
+++ b/package.json
@@ -3,27 +3,20 @@
   "version": "1.0.0",
   "description": "A community for record enthusiasts to review their favorite albums.",
   "scripts": {
-    "start": "node server.js",
-    "start:dev": "nodemon server.js",
-    "db:create": "createdb vinyl",
-    "db:drop": "dropdb vinyl",
-    "db:schema": "psql -d vinyl < schema.sql",
-    "db:seed": "psql -d vinyl < albums.sql"
+    "start": "node app.js",
+    "start:dev": "nodemon app.js",
+    "migrate:up": "knex migrate:latest --knexfile db/knexfile.js",
+    "migrate:down": "knex migrate:rollback --knexfile db/knexfile.js"
   },
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.17.2",
-    "ejs": "^2.5.6",
     "express": "^4.15.3",
     "knex": "^0.13.0",
     "pg": "^6.2.4",
-    "react": "^15.6.1"
+    "pug": "^2.0.0-rc.1"
   },
   "devDependencies": {
-    "body-parser": "^1.17.2",
-    "ejs": "^2.5.6",
-    "express": "^4.15.3",
-    "nodemon": "^1.11.0",
-    "pg": "^6.2.4"
+    "nodemon": "^1.11.0"
   }
 }
