--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.17.2",
+    "cookie-parser": "^1.4.3",
+    "ejs": "^2.5.6",
     "express": "^4.15.3",
     "knex": "^0.13.0",
-    "pg": "^6.2.4",
-    "pug": "^2.0.0-rc.1"
+    "pg": "^6.2.4"
   },
   "devDependencies": {
     "nodemon": "^1.11.0"
