--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "node app.js",
     "start:dev": "nodemon app.js",
     "migrate:up": "knex migrate:latest --knexfile db/knexfile.js",
-    "migrate:down": "knex migrate:rollback --knexfile db/knexfile.js"
+    "migrate:down": "knex migrate:rollback --knexfile db/knexfile.js",
+    "seed": "knex seed:run --knexfile db/knexfile.js"
   },
   "license": "MIT",
   "dependencies": {
